# meta-conversions-api-app

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODEOWNERS.txt  CONTRIBUTING.md  Makefile  NOTICE  NOTICE.md  README.md  RELEASE.md  SECURITY.md  codecov.yml  pyproject.toml  requirements.txt
.github/: CLAUDE.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: codeql.yml  push.yml  release.yml
app/: app.py  app.yaml  manifest.yaml
app/frontend/: index.html  package-lock.json  package.json  test-flow.mjs  test-screenshot.mjs  test-screenshots.mjs  tsconfig.tsbuildinfo
app/frontend/src/: App.tsx  index.css  main.tsx
app/frontend/src/components/: CatalogPrompt.tsx  ConnectionDetail.tsx  ConnectionList.tsx  Footer.tsx  JobSetup.tsx  LaunchTile.tsx  Navbar.tsx  PostSetupOptions.tsx  QuickLaunch.tsx  QuickStart.tsx  SettingsButton.tsx  Wizard.tsx
app/frontend/src/hooks/: useApi.ts
app/server/: capi_runner.py  config.py  routes.py
app/server/assets/: mapping_conversion.yaml  mapping_custom.yaml  meta_capi_udtf_example.ipynb.json  register_udtf.py  udtf_inline_source.py
docs/: architecture.md  deployment.md  index.md  troubleshooting.md  user-guide.md
tests/: test_app.py  test_capi_runner.py
